// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification Component should render notification component with status error 1`] = `
<Styled(Col)
  colSize={
    Object {
      "large": 10,
      "medium": 8,
      "small": 6,
    }
  }
>
  <img
    alt="errorIcon"
    src=""
  />
  <Styled(BodyStyle)
    bodyColor="white"
    bodySize="five"
    className="notification"
    tag="span"
  />
</Styled(Col)>
`;

exports[`Notification Component should render notification component with status success 1`] = `
<Styled(Col)
  colSize={
    Object {
      "large": 10,
      "medium": 8,
      "small": 6,
    }
  }
>
  <img
    alt="successIcon"
    src="/static/images/done.svg"
  />
  <Styled(BodyStyle)
    bodyColor="darkGray"
    bodySize="five"
    className="notification"
    tag="span"
  />
</Styled(Col)>
`;
